# ylab

./: README.md
Caches/: .gitignore  CMakeLists.txt
Caches/include/: LFU.hpp  LRU.hpp  generic_hit_count.hpp  hit_count.hpp  ideal.hpp  ideal_old.hpp  inputds.hpp  test.hpp  tester.hpp
Caches/src/: LFU.cc  LRU.cc  ideal.cc  ideal_old.cc  test.cc
Caches/src/testers/: LFUtest.cc  LRUtest.cc  idealtest.cc
Caches/tests/: LFU.test  LFU_gen.test  LRU.test  LRU_gen.test  benchmarks.json  generator.py  ideal.test  ideal_gen.test  prototypes.py
Caches/tests/LFU/: 1.test
Caches/tests/LRU/: 3.test
Caches/tests/ideal/: 2.test
HW3D/: .gitignore  CMakeLists.txt
HW3D/include/: Line3D.hpp  LineInf3D.hpp  LineRay3D.hpp  LineSeg3D.hpp  Plane3D.hpp  Triangle3D.hpp  Vec3D.hpp  base_intersects.hpp  bbox.hpp  intersectible.hpp  intersection.hpp  intersections.hpp  intervals.hpp  lines.hpp  primitive_intersections.hpp  task.hpp  task_algorithm.hpp  triangle_intersections.hpp
HW3D/src/: base_intersects.cc  main.cc  task.cc  task_algorithm.cc  triangle_intersections.cc  utests.cc
HW3D/tests/: 2DGenDemo.ipynb  TestGenDemo.ipynb  e2e.test  hardcoded.test  pairgen.py  scramble.py  showdata.py  showtest.py  testgen.py  triangles.test
Matrix/: .gitignore  CMakeLists.txt
Matrix/include/: e2etest.hpp  matrix.hpp  matrix_algorithm.hpp  task.hpp
Matrix/src/: main.cc  task.cc  utests.cc
Matrix/tests/: build.test  build_tests.py  gen_tests.py  hardcoded.test  scrambled.test  testgen.py
